<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_map_main_color_24dp"
            android:title="@string/locations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_main_color_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_main_color_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_setup"
            android:icon="@drawable/ic_location_main_color_24dp"
            android:title="@string/setup" />

    </group>

    <group android:id="@+id/group_settings" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_help_buoy_main_color_24dp"
            android:title="@string/support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_main_color_24dp"
            android:title="@string/logout" />
    </group>

</menu>
