<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:background="@color/colorBackground"
        android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@drawable/line_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/nickname_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/nickname_title"
            tools:text="@string/nickname_title"
            style="@style/LoginText"

            app:layout_constraintTop_toBottomOf="@+id/divider1"

            android:layout_marginTop="@dimen/common_margin"


            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="16dp"/>

        <com.sprytar.android.util.ui.SignUpEditText
            android:id="@+id/nickname_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/nickname_title"
            android:background="@drawable/bg_login_edittext"
            style="@style/LoginText.EditText"
            android:paddingTop="@dimen/common_padding"
            android:paddingBottom="@dimen/common_padding"

            app:layout_constraintTop_toBottomOf="@+id/nickname_textView"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"

            tools:layout_editor_absoluteX="16dp"/>

        <TextView
            android:id="@+id/birthday_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/birthday_title"
            tools:text="@string/birthday_title"
            style="@style/LoginText"

            app:layout_constraintTop_toBottomOf="@+id/nickname_editText"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:layout_editor_absoluteX="16dp"/>

        <com.sprytar.android.util.ui.SignUpEditText
            android:id="@+id/birthday_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="@drawable/bg_login_edittext"
            style="@style/LoginText.EditText"
            android:focusable="false"
            android:inputType="none"

            android:drawableRight="@drawable/ic_expand_more_grey_24dp"

            app:layout_constraintTop_toBottomOf="@+id/birthday_textView"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"
            tools:layout_editor_absoluteX="16dp"/>

        <TextView
            android:id="@+id/gender_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/gender"
            tools:text="@string/gender"
            style="@style/LoginText"

            app:layout_constraintTop_toBottomOf="@+id/birthday_editText"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"/>

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/gender_textView"
            app:layout_constraintStart_toStartOf="@+id/gender_textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin">

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/male"
                android:checked="false"
                app:buttonTint="@android:color/black"
                android:text="@string/gender_male"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/female"
                android:checked="false"
                app:buttonTint="@android:color/black"
                android:text="@string/gender_female"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rather_not_say"
                android:lines="2"
                android:checked="true"
                app:buttonTint="@android:color/black"
                android:text="@string/gender_rather_not_say"/>
        </RadioGroup>

        <TextView
            android:id="@+id/postcode_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/postcode"
            tools:text="@string/postcode"
            style="@style/LoginText"

            app:layout_constraintTop_toBottomOf="@+id/gender_group"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"/>

        <com.sprytar.android.util.ui.SignUpEditText
            android:id="@+id/postcode_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="@drawable/bg_login_edittext"
            style="@style/LoginText.EditText"
            android:paddingTop="@dimen/common_padding"
            android:paddingBottom="@dimen/common_padding"

            app:layout_constraintTop_toBottomOf="@+id/postcode_textView"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"

            tools:layout_editor_absoluteX="16dp"/>

        <TextView
            android:id="@+id/pickAvatar_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/pick_avatar"
            tools:text="@string/pick_avatar"
            style="@style/LoginText"

            app:layout_constraintTop_toBottomOf="@+id/postcode_editText"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"/>

        <GridView
            android:id="@+id/avatar_gridview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:columnWidth="90dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="16dp"
            android:horizontalSpacing="16dp"
            android:stretchMode="columnWidth"
            android:gravity="center"

            app:layout_constraintTop_toBottomOf="@id/pickAvatar_textView"
            android:layout_marginTop="@dimen/common_margin"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/common_margin"
            android:layout_marginLeft="@dimen/common_margin"/>

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_gridview"

            android:minWidth="64dp"
            android:text="@string/add"
            android:textColor="@color/colorPrimaryText"/>

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minWidth="64dp"

            app:layout_constraintEnd_toStartOf="@+id/add_button"
            app:layout_constraintTop_toBottomOf="@id/avatar_gridview"

            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryText"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="211dp"/>


    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>