<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/common_padding"
            android:background="@drawable/bg_network_dialog">


            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                tools:text="@string/alert_message_title"
                android:textColor="@color/colorGameHeader"
                android:background="@android:color/white"
                android:fontFamily="sans-serif"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:text="X"
                android:gravity="center"
                android:textSize="@dimen/text_size_title"
                android:textColor="@color/colorGameHeader"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                />


            <TextView
                android:id="@+id/tvDialogMessage"
                style="@style/NetworkProblemDialogText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDialogTitle"
                android:background="@android:color/white"
                android:textSize="@dimen/text_size_regular"
                tools:text="@string/connection_problem_message" />


            <ImageView
                android:id="@+id/ivError"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/tvDialogMessage"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:src="@drawable/wifi_icon" />


            <TextView
                android:id="@+id/tvDescription"
                style="@style/NetworkProblemDialogText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivError"
                android:autoLink="email"
                android:background="@android:color/white"
                tools:text="Dont panic: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.\n\nDont panic: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna."
                android:textSize="@dimen/text_size_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTryAgain"
                android:clickable="true"
                android:layout_below="@+id/tvDescription"
                android:text="@string/try_again"
                android:textStyle="bold"
                style="@style/NetworkProblemDialogText"
                android:textSize="36sp"
                android:background="@android:color/white"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
    </ScrollView>




</layout>